# pc-performance-diagnoser

./: .gitignore  README.md  config.yaml  requirements.txt
api/: main.py  routes.py  system_status.py
collector/: cleanup.py  cleanup_log.py  collect.py  db.py  dev_junk.py  disk_scan.py  duplicates.py  folder_growth.py  main.py  network.py  paths.py  process_control.py  process_groups.py  reveal.py  scheduler.py  startup_items.py  storage_cache.py  system_hints.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: AlertsPanel.tsx  AnalyzePanel.tsx  App.css  App.tsx  AppIcon.tsx  CleanupPanel.tsx  DiagnosisHistory.tsx  DiskPanel.tsx  ExportPanel.tsx  InsightsPanels.tsx  LargeFilesPanel.tsx  LiveProcessPanel.tsx  MetricsChart.tsx  OnboardingWizard.tsx  PanelShell.tsx  ProcessTable.tsx  ScanRing.tsx  ServiceStatus.tsx  SetupBanner.tsx  Sidebar.tsx  SlowNowPanel.tsx  StartupPanel.tsx  StatusHero.tsx  api.ts  (+9 more)
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: backend.rs  lib.rs
engine/: baseline.py  config.py  detect.py  impact.py  llm.py  schemas.py  slow_now.py  summary.py  weekly_digest.py
scripts/: Launch Diagnoser.command  check_data.py  collect_once.py  install.sh  start-desktop.sh  start.sh  stop-desktop.sh  stop.sh  test_db.py  test_diagnose.py  test_psutil.py
tests/: test_api_routes.py  test_detect.py  test_disk_scan.py  test_reveal.py  test_startup_items.py  test_storage.py  test_storage_cache.py
